# e2e_encryption

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-MIT  Makefile  README.md  crates.js  deny.toml  help.html  rustfmt.toml  search-index.js  settings.html  src-files.js
.cargo/: config.toml
.github/workflows/: docs.yml  release.yml  rust.yml
.github/workflows/actions/setup-rust/: action.yml
crates/cli/e2ee/: Cargo.toml
crates/cli/e2ee/files/: private.pem  public.pem
crates/cli/e2ee/src/: error.rs  main.rs
crates/cli/e2ee/wix/: main.wxs
crates/lib/e2ee/: Cargo.toml
crates/lib/e2ee/examples/: e2e_key_generation.rs  e2ee_client_encrypt.rs  e2ee_key_generation.rs  e2ee_server_decrypt.rs  e2ee_server_encrypt.rs  e2ee_simple.rs
crates/lib/e2ee/files/: private.pem  public.pem
crates/lib/e2ee/src/: client.rs  ffi.rs  lib.rs  server.rs
crates/lib/e2ee/src/client/: error.rs
crates/lib/e2ee/src/server/: error.rs
e2ee/: all.html  index.html  sidebar-items.js
e2ee/client/: index.html  sidebar-items.js  struct.PublicE2ee.html
e2ee/ffi/: fn.e2ee_client_encrypt.html  fn.e2ee_client_free.html  fn.e2ee_client_new_from_public_pem.html  fn.e2ee_server_decrypt.html  fn.e2ee_server_encrypt.html  fn.e2ee_server_free.html  fn.e2ee_server_free_string.html  fn.e2ee_server_get_private_key_pem.html  fn.e2ee_server_get_public_key_pem.html  fn.e2ee_server_new.html  fn.e2ee_server_new_from_pem.html  index.html  sidebar-items.js
e2ee/server/: enum.KeySize.html  index.html  sidebar-items.js  struct.E2ee.html
e2ee_cli/: all.html  enum.Commands.html  fn.main.html  index.html  struct.Cli.html
search.desc/e2ee/: e2ee-desc-0-.js
search.desc/e2ee_cli/: e2ee_cli-desc-0-.js
src/e2ee/: client.rs.html  ffi.rs.html  lib.rs.html  server.rs.html
src/e2ee/client/: error.rs.html
src/e2ee/server/: error.rs.html
src/e2ee_cli/: main.rs.html
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js  trait.ValueEnum.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
wix/: main.wxs
