[package]
name = "e2ee-cli"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Kha Nguyen <nguyencaokha131995@gmail.com>"]
repository = "https://github.com/CaoKha/e2e_encryption"
description = "E2EE CLI"
homepage = "https://github.com/CaoKha/e2e_encryption"

[[bin]]
name = "e2ee-cli"
path = "src/main.rs"

[dependencies]
e2ee = { path = "../../lib/e2ee" }
thiserror = { version = "1.0" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[package.metadata.bundle]
name = "e2ee-cli"
identifier = "com.caokha.e2eecli"
icon = ["lock32x32.png", "lock128x128.png", "lock128x128@2x.png"]
version = "0.1.1"
resources = ["files/*.pem"]
copyright = "Copyright (c) Kha Nguyen 2024. All rights reserved."
category = "Developer Tool"
short_description = "E2EE CLI."
long_description = """
This is a CLI for End to End Encryption.
"""
osx_url_schemes = ["com.caokha.e2eecli"]

[package.metadata.wix]
upgrade-guid = "B4A375B6-7AAA-47F4-B215-C6E85B221761"
path-guid = "C0A2A479-C766-4F9F-A7E3-C03E4D25B809"
license = false
eula = false
